[DATA] changed authorize.net transaction key

--- a/fixture/default/core/Mage/_uimapIncludes/paypal_developer.yml
+++ b/fixture/default/core/Mage/_uimapIncludes/paypal_developer.yml
@@ -32,4 +32,4 @@ paypal_developer:
             general_error: "//*[@id='alert_content']/span[@class='error']"
             success_created_account: "//*[@id='alert_content']/span[@class='message'][text()='You have successfully created a test account. You can view email for this account on the Test Email tab.']"
             failed_account_creation: "//*[@id='alert_content']/span[@class='error'][text()='The account creation process failed, resulting in an incomplete account profile. Please delete this account and start over']"
-            success_created_account_without_card: "//*[@id='alert_content']/span[@class='message'][text()='Account Created Successfully but failed to Add Credit Card and Bank']"
+            success_created_account_without_card: "//*[@id='alert_content']/span[@class='message'][text()='Account Created Successfully but failed to add Credit Card and Bank']"
