--- a/fixture/default/core/Mage/_uimapIncludes/admin.yml
+++ b/fixture/default/core/Mage/_uimapIncludes/admin.yml
@@ -54,6 +54,8 @@ admin_header:
                             qtyElementsInTable: //td[@class='pager']//span[contains(@id,'total-count')]
                             fieldNameWithValidationMessage: "/ancestor::*[1]/preceding-sibling::*[1]/descendant-or-self::*[string-length(text())>1]"
                             loadingHolder: "//div[@id='loading-mask'][not(contains(@style,'display:') and contains(@style,'none'))]"
+                            dropdown_option_text: "%dropdownXpath%/option[normalize-space(text())='%optionText%']"
+                            dropdown_option_selected: "%dropdownXpath%/option[@selected='selected']"
         messages:
             general_notice: "//*/descendant::*[normalize-space(@class)='notice-msg'][string-length(.)>1]"
             general_success: "//*/descendant::*[normalize-space(@class)='success-msg'][string-length(.)>1]"
