--- a/dev/tests/functional/fixture/community2/core/Mage/ImportExport/uimap/admin/ImportExport.yml
+++ b/dev/tests/functional/fixture/community2/core/Mage/ImportExport/uimap/admin/ImportExport.yml
@@ -44,6 +44,16 @@ import:
                             file_to_import: //input[@id='import_file']
                         pageelements:
                             import_file_note: //span[@id='importFileNote' and contains(., 'Import allows to change only status, _shipment_track_number, _shipment_comment_comment, _order_status_history_comment columns. Any changes in other columns will be ignored.')]
+                -
+                    import_format:
+                        xpath: //div[@id="import_format_version_fieldset"]
+                        dropdowns:
+                            import_file_version: //select[@id='file_format_version']
+                -
+                    customer_entity_type:
+                        xpath: //div[@id="customer_entity_fieldset"]
+                        dropdowns:
+                            import_customer_entity: //select[@id='customer_entity']
         messages:
             extension_not_supported: //div[@id='import_validation_messages']//*[@class='error-msg']//span[contains(text(),'%extension% file extension is not supported')]
             no_extension: //div[@id='import_validation_messages']//*[@class='error-msg']//span[contains(text(),'Uploaded file has no extension')]
@@ -59,7 +69,6 @@ import:
         buttons:
             check_data: //button[@id='upload_button' and span='Check Data']
             import: //button[span='Import']
-        links:
 
 export:
     mca: export
