--- a/fixture/community2/core/Mage/AdminUser/data/AdminUserRole.yml
+++ b/fixture/community2/core/Mage/AdminUser/data/AdminUserRole.yml
@@ -83,4 +83,16 @@ edit_admin_user_role_custom:
         role_users_1: *roleUsersTemplate
         role_users_2: %noValue%
 
+edit_admin_user_role_name:
+    search_role:
+        id: %noValue%
+        role_name: %roleName%
+    role_info_tab:
+        role_name: %newRoleName%
+
+delete_admin_user_role:
+    search_role:
+        id: %noValue%
+        role_name: %roleName%
+
 
