--- a/fixture/default/core/Mage/Customer/uimap/frontend/MyAccount.yml
+++ b/fixture/default/core/Mage/Customer/uimap/frontend/MyAccount.yml
@@ -94,6 +94,10 @@ view_order:
                         pageelements:
                             product_table_head: //table[@id='my-orders-table']/thead
                             price_totals: //table[@id='my-orders-table']/tfoot
+                            price_totals_line: //table[@id='my-orders-table']/tfoot/descendant::tr
+                            price_totals_line_index: //table[@id='my-orders-table']/tfoot/descendant::tr[%index%]
+                            price_totals_line_index_name: //table[@id='my-orders-table']/tfoot/descendant::tr[%index%]/*[1]
+                            price_totals_line_index_value: //table[@id='my-orders-table']/tfoot/descendant::tr[%index%]/*[2]
                             product_line:  //table[@id='my-orders-table']/tbody
         messages: *myAccountMessages
 
