--- a/fixture/default/core/Mage/ShoppingCartPriceRule/uimap/admin/ShoppingCartPriceRule.yml
+++ b/fixture/default/core/Mage/ShoppingCartPriceRule/uimap/admin/ShoppingCartPriceRule.yml
@@ -116,7 +116,7 @@ create_shopping_cart_price_rule:
                                         condition_value: //ul[@id='conditions__%condition%__children']/li[%key%]/span[contains(.//@name,'value')]/a
                                         condition_aggregator: //ul[@id='conditions__%condition%__children']/li[%key%]/span[.//select[contains(@name,'aggregator')]]/a
                                         condition_attribute: //ul[@id='conditions__%condition%__children']/li[%key%]/span[.//select[contains(@name,'attribute')]]/a
-                                        open_chosser: //ul[@id='conditions__%condition%__children']/li[%key%]//img[contains(@src,'rule_chooser_trigger')]
+                                        open_chooser: //ul[@id='conditions__%condition%__children']/li[%key%]//img[contains(@src,'rule_chooser_trigger')]
                                         confirm_choice: //ul[@id='conditions__%condition%__children']/li[%key%]//img[contains(@src,'rule_component_apply')]
                                         root_category: //ul/div/li[contains(div/a/span,'%rootName%')]
                                         sub_category: //*[@id='%parentCategoryId%']/ancestor::li/ul/li[contains(div/a/span,'%subName%') and not(div/a/span/@id='%parentCategoryId%')]
@@ -167,7 +167,7 @@ create_shopping_cart_price_rule:
                                         action_value: //ul[@id='actions__%condition%__children']/li[%key%]/span[contains(.//@name,'value')]/a
                                         action_aggregator: //ul[@id='actions__%condition%__children']/li[%key%]/span[.//select[contains(@name,'aggregator')]]/a
                                         action_attribute: //ul[@id='actions__%condition%__children']/li[%key%]/span[.//select[contains(@name,'attribute')]]/a
-                                        open_chosser: //ul[@id='actions__%condition%__children']/li[%key%]//img[contains(@src,'rule_chooser_trigger')]
+                                        open_chooser: //ul[@id='actions__%condition%__children']/li[%key%]//img[contains(@src,'rule_chooser_trigger')]
                                         confirm_choice: //ul[@id='actions__%condition%__children']/li[%key%]//img[contains(@src,'rule_component_apply')]
                                         root_category: //ul/div/li[contains(div/a/span,'%rootName%')]
                                         sub_category: //*[@id='%parentCategoryId%']/ancestor::li/ul/li[contains(div/a/span,'%subName%') and not(div/a/span/@id='%parentCategoryId%')]
