--- a/fixture/default/core/Mage/_uimapIncludes/frontend.yml
+++ b/fixture/default/core/Mage/_uimapIncludes/frontend.yml
@@ -64,6 +64,7 @@ frontend_header:
                             table_line_index_cell_index_with_input_value: "%tableLineXpath%[%lineIndex%]//td[%cellIndex%]/input[@value]"
                             table_line_index_cell_index_options: "%tableLineXpath%[%lineIndex%]//td[%cellIndex%]//*[@class='item-options']"
                             table_line_index_cell_index_product_name: "%tableLineXpath%[%lineIndex%]//td[%cellIndex%]//*[@class='product-name']"
+                            element_index: "%elementXpath%[%index%]"
         messages:
             success_registration: //li[normalize-space(@class)='success-msg' and contains(.,'Thank you for registering with')]
             general_notice: "//*/descendant::*[normalize-space(@class)='notice-msg'][string-length(.)>1]"
