Implemented MAGETWO-1731: Added TL-MAGE-5643

--- a/dev/tests/functional/fixture/enterprise2/core/Mage/ImportExport/data/ImportExport.yml
+++ b/dev/tests/functional/fixture/enterprise2/core/Mage/ImportExport/data/ImportExport.yml
@@ -38,5 +38,9 @@ import_main_file_required_fields:
    reward_update_notification: 1
    reward_warning_notification: 1
 
-
+import_finance_file_required_fields:
+   email: %noValue%
+   _website: base
+   store_credit: 4321.0000
+   reward_points: 1234
 
